k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duotrak-frontend
  namespace: default
spec:
  selector:
    app: duotrak-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
